# portmatching-benchmarking

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
datasets/circuits/: barenco_tof_10.qasm
datasets/eccs/: 2_6-eccs.json  3_6-eccs.json
datasets/voqc-eccs/: Voqc_1_1_representative_set.json  Voqc_1_2_complete_ECC_set.json  Voqc_1_2_representative_set.json  Voqc_1_3_representative_set.json  Voqc_1_4_representative_set.json  Voqc_2_1_representative_set.json  Voqc_2_2_complete_ECC_set.json  Voqc_2_2_representative_set.json  Voqc_2_3_complete_ECC_set.json  Voqc_2_3_representative_set.json  Voqc_2_4_complete_ECC_set.json  Voqc_2_4_representative_set.json  Voqc_3_1_complete_ECC_set.json  Voqc_3_1_representative_set.json  Voqc_3_2_complete_ECC_set.json  Voqc_3_2_representative_set.json  Voqc_3_3_complete_ECC_set.json  Voqc_3_3_representative_set.json  Voqc_3_4_complete_ECC_set.json  Voqc_3_4_representative_set.json  Voqc_4_2_complete_ECC_set.json  Voqc_4_2_representative_set.json  Voqc_4_3_complete_ECC_set.json  Voqc_4_3_representative_set.json  Voqc_4_4_complete_ECC_set.json  Voqc_5_2_complete_ECC_set.json  Voqc_5_2_representative_set.json  Voqc_5_3_complete_ECC_set.json  Voqc_5_3_representative_set.json  Voqc_5_4_complete_ECC_set.json  Voqc_6_2_complete_ECC_set.json  Voqc_6_2_representative_set.json  Voqc_6_3_complete_ECC_set.json  Voqc_7_1_representative_set.json  Voqc_7_2_complete_ECC_set.json  (+4 more)
py-scripts/: plot.py  qasm_to_json.py  single_json_to_qasm.py  single_qasm_to_json.py
quartz_bindings/: bindings.cpp  bindings.hpp
src/: datasets.rs  main.rs  utils.rs
(+3 files in other folders)
